# skylinkcpp-demo

./: .gitignore  CMakeLists.txt  Readme.md
scripts/: cloneBoost.sh  clonePortAudio.sh  cloneSDL.sh  cloneSkylinkcpp.sh  common.sh  init.sh
src/: MediaObserverImpl.cpp  MediaObserverImpl.h  SkylinkObserverImpl.cpp  SkylinkObserverImpl.h  main.cpp
